--- a/test.html
+++ b/test.html
@@ -67,11 +67,15 @@
 		</div>
 
 		
+		<iframe class="iframe_form" title="Form" src="/form_test.html" height="100%" width="100%"></iframe>
 
+		<script type="text/javascript" language="javascript"> 
+			$('.iframe_form').css('height', $(window).height()+'px');
+		</script>
 		
 	</div><!-- /container -->
 
-	<iframe title="Form" src="/form_test.html" height="100%" width="100%"></iframe>
+	
 	
 	
 	
