--- a/form_test.html
+++ b/form_test.html
@@ -11,8 +11,23 @@
 	
 	<div class="container pt">
 
-		<div>What is your name?</div>
+		<div>Type in product you are providing feedback for</div>
 		<input type="text" id="subject">
+
+		<div>How would you rate this product?</div>
+		<div>
+			<input type="radio" id="contactChoice1" name="contact" value="1" />
+			<label for="contactChoice1">1. Worst</label>
+	  
+			<input type="radio" id="contactChoice2" name="contact" value="3" />
+			<label for="contactChoice2"></label>
+	  
+			<input type="radio" id="contactChoice3" name="contact" value="5" />
+			<label for="contactChoice3">5. Best</label>
+		</div>
+
+		<div>Type in product you are providing feedback for</div>
+		<input type="text" id="rec_rating">
 
 		<div>Please tell us how you feel</div>
 		<textarea id="body"></textarea>
@@ -24,16 +39,7 @@
 		<div>misc placeholder things here </div>
 		<div>misc placeholder things here </div>
 		
-
-		
 	</div><!-- /container -->
-
-	<div class="container pt">
-		<div>misc placeholder things here </div>
-		<div>misc placeholder things here </div>
-		<div>misc placeholder things here </div>
-		<div>misc placeholder things here </div>
-	</div>
 
   </body>
 </html>
