--- a/test.html
+++ b/test.html
@@ -67,7 +67,7 @@
 		</div>
 
 		
-		<iframe class="iframe_form" title="Form" src="/form_test.html" height="100%" width="100%"></iframe>
+		<iframe class="iframe_form" title="Form" src="/form_test.html" width="100%"></iframe>
 
 		<script type="text/javascript" language="javascript"> 
 			$('.iframe_form').css('height', $(window).height()+'px');
