--- a/form_test.html
+++ b/form_test.html
@@ -19,10 +19,16 @@
 			<input type="radio" id="contactChoice1" name="contact" value="1" />
 			<label for="contactChoice1">1. Worst</label>
 	  
-			<input type="radio" id="contactChoice2" name="contact" value="3" />
-			<label for="contactChoice2"></label>
+			<input type="radio" id="contactChoice2" name="contact" value="2" />
+			<label for="contactChoice2">2. </label>
+
+			<input type="radio" id="contactChoice3" name="contact" value="3" />
+			<label for="contactChoice2">3. </label>
+
+			<input type="radio" id="contactChoice4" name="contact" value="4" />
+			<label for="contactChoice2">4. </label>
 	  
-			<input type="radio" id="contactChoice3" name="contact" value="5" />
+			<input type="radio" id="contactChoice5" name="contact" value="5" />
 			<label for="contactChoice3">5. Best</label>
 		</div>
 
