--- a/form_test.html
+++ b/form_test.html
@@ -16,11 +16,21 @@
 
 		<div>How would you rate this product?</div>
 		<div>
-			<label>Worst</label>
-			<input type="range" id="rateRange" name="rateRange"
-				   min="0" max="10">
-			<label for="rateRange">Best</label>
-		  </div>
+			<input type="radio" id="contactChoice1" name="contact" value="1" />
+			<label for="contactChoice1">1</label>
+	  
+			<input type="radio" id="contactChoice2" name="contact" value="2" />
+			<label for="contactChoice2">2</label>
+
+			<input type="radio" id="contactChoice3" name="contact" value="3" />
+			<label for="contactChoice2">3</label>
+
+			<input type="radio" id="contactChoice4" name="contact" value="4" />
+			<label for="contactChoice2">4</label>
+	  
+			<input type="radio" id="contactChoice5" name="contact" value="5" />
+			<label for="contactChoice3">5</label>
+		</div>
 
 		<div>Type in product you are providing feedback for</div>
 		<input type="text" id="rec_rating">
