--- a/form_test.html
+++ b/form_test.html
@@ -15,6 +15,44 @@
 		<input type="text" id="subject">
 
 		<div>How would you rate this product?</div>
+
+		<table>
+			<tr>
+				<td>
+					Worst
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td>
+					Best
+				</td>
+
+			</tr>
+			<tr>
+				<td>
+					<input type="radio" id="contactChoice1" name="contact" value="1" />
+					<label for="contactChoice1">1</label>
+				</td>
+				<td>
+					<input type="radio" id="contactChoice2" name="contact" value="2" />
+					<label for="contactChoice2">2</label>
+				</td>
+				<td>
+					<input type="radio" id="contactChoice3" name="contact" value="3" />
+					<label for="contactChoice2">3</label>
+				</td>
+				<td>
+					<input type="radio" id="contactChoice4" name="contact" value="4" />
+					<label for="contactChoice2">4</label>
+				</td>
+				<td>
+					<input type="radio" id="contactChoice5" name="contact" value="5" />
+					<label for="contactChoice3">5</label>
+				</td>
+			</tr>
+		</table>
+
 		<div>
 			<input type="radio" id="contactChoice1" name="contact" value="1" />
 			<label for="contactChoice1">1</label>
