--- a/form_test.html
+++ b/form_test.html
@@ -53,11 +53,46 @@
 			</tr>
 		</table>
 
+		<div>How likely would you recommend this product to a friend?</div>
 
-		<div>Type in product you are providing feedback for</div>
-		<input type="text" id="rec_rating">
+		<table>
+			<tr>
+				<td>
+					Very Unlikely
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td>
+					Very Likely
+				</td>
 
-		<div>Please tell us how you feel</div>
+			</tr>
+			<tr>
+				<td>
+					<input type="radio" id="contactChoice1" name="contact" value="1" />
+					<label for="contactChoice1">1</label>
+				</td>
+				<td>
+					<input type="radio" id="contactChoice2" name="contact" value="2" />
+					<label for="contactChoice2">2</label>
+				</td>
+				<td>
+					<input type="radio" id="contactChoice3" name="contact" value="3" />
+					<label for="contactChoice2">3</label>
+				</td>
+				<td>
+					<input type="radio" id="contactChoice4" name="contact" value="4" />
+					<label for="contactChoice2">4</label>
+				</td>
+				<td>
+					<input type="radio" id="contactChoice5" name="contact" value="5" />
+					<label for="contactChoice3">5</label>
+				</td>
+			</tr>
+		</table>
+
+		<div>Please list some areas of improvement, or things that worked well. You can also leave general comments here.</div>
 		<textarea id="body"></textarea>
 
 		<div><button onclick="submitThings()" type="button" id="send">Submit</button></div>
