--- a/form_test.html
+++ b/form_test.html
@@ -58,13 +58,13 @@
 		<table>
 			<tr>
 				<td>
-					Very Unlikely
+					Unlikely
 				</td>
 				<td></td>
 				<td></td>
 				<td></td>
 				<td>
-					Very Likely
+					Likely
 				</td>
 
 			</tr>
@@ -97,10 +97,6 @@
 
 		<div><button onclick="submitThings()" type="button" id="send">Submit</button></div>
 
-		<div>misc placeholder things here </div>
-		<div>misc placeholder things here </div>
-		<div>misc placeholder things here </div>
-		<div>misc placeholder things here </div>
 		
 	</div><!-- /container -->
 
