--- a/form_test.html
+++ b/form_test.html
@@ -55,7 +55,7 @@
 
 		<div>How likely would you recommend this product to a friend?</div>
 
-		<table>
+		<table style="table-layout:fixed; width: 500px">
 			<tr>
 				<td>
 					Unlikely
