--- a/form_test.html
+++ b/form_test.html
@@ -55,6 +55,8 @@
 			</tr>
 		</table>
 
+		<div></div>
+
 		<div>How likely would you recommend this product to a friend?</div>
 
 		<table style="table-layout:fixed; width: 300px">
