--- a/form_test.html
+++ b/form_test.html
@@ -55,8 +55,6 @@
 			</tr>
 		</table>
 
-		<div></div>
-
 		<div>How likely would you recommend this product to a friend?</div>
 
 		<table style="table-layout:fixed; width: 300px">
@@ -98,7 +96,7 @@
 		</table>
 
 		<div>Please list some areas of improvement, or things that worked well. You can also leave general comments here.</div>
-		<textarea id="body"></textarea>
+		<textarea id="body" style="height: 250px; width: 250px;"></textarea>
 
 		<div><button onclick="submitThings()" type="button" id="send">Submit</button></div>
 
