--- a/test.html
+++ b/test.html
@@ -70,7 +70,7 @@
 		<iframe class="iframe_form" title="Form" src="/form_test.html" width="100%"></iframe>
 
 		<script type="text/javascript" language="javascript"> 
-			$('.iframe_form').css('height', $(window).height()+'px');
+			$('.iframe_form').css('height', String($(window).height()*0.8)+'px');
 		</script>
 		
 	</div><!-- /container -->
