--- a/form_test.html
+++ b/form_test.html
@@ -16,7 +16,7 @@
 
 		<div>How would you rate this product?</div>
 
-		<table style="table-layout:fixed; width: 300px">
+		<table style="table-layout:fixed; width: 300px;padding: 15px;">
 			
 			<tr>
 				<td>
@@ -57,7 +57,7 @@
 
 		<div>How likely would you recommend this product to a friend?</div>
 
-		<table style="table-layout:fixed; width: 300px">
+		<table style="table-layout:fixed; width: 300px;padding: 15px;">
 			
 			<tr>
 				<td>
