--- a/form_test.html
+++ b/form_test.html
@@ -20,24 +20,24 @@
 			
 			<tr>
 				<td>
-					<input type="radio" id="contactChoice1" name="contact" value="1" />
-					<label for="contactChoice1">1</label>
+					<input type="radio" id="rateChoice1" name="contact" value="1" />
+					<label for="rateChoice1">1</label>
 				</td>
 				<td>
-					<input type="radio" id="contactChoice2" name="contact" value="2" />
-					<label for="contactChoice2">2</label>
+					<input type="radio" id="rateChoice2" name="contact" value="2" />
+					<label for="rateChoice2">2</label>
 				</td>
 				<td>
-					<input type="radio" id="contactChoice3" name="contact" value="3" />
-					<label for="contactChoice2">3</label>
+					<input type="radio" id="rateChoice3" name="contact" value="3" />
+					<label for="rateChoice2">3</label>
 				</td>
 				<td>
-					<input type="radio" id="contactChoice4" name="contact" value="4" />
-					<label for="contactChoice2">4</label>
+					<input type="radio" id="rateChoice4" name="contact" value="4" />
+					<label for="rateChoice2">4</label>
 				</td>
 				<td>
-					<input type="radio" id="contactChoice5" name="contact" value="5" />
-					<label for="contactChoice3">5</label>
+					<input type="radio" id="rateChoice5" name="contact" value="5" />
+					<label for="rateChoice3">5</label>
 				</td>
 			</tr>
 
@@ -51,7 +51,6 @@
 				<td>
 					Best
 				</td>
-
 			</tr>
 		</table>
 
@@ -61,24 +60,24 @@
 			
 			<tr>
 				<td>
-					<input type="radio" id="contactChoice1" name="contact" value="1" />
-					<label for="contactChoice1">1</label>
+					<input type="radio" id="recChoice1" name="contact" value="1" />
+					<label for="recChoice1">1</label>
 				</td>
 				<td>
-					<input type="radio" id="contactChoice2" name="contact" value="2" />
-					<label for="contactChoice2">2</label>
+					<input type="radio" id="recChoice2" name="contact" value="2" />
+					<label for="recChoice2">2</label>
 				</td>
 				<td>
-					<input type="radio" id="contactChoice3" name="contact" value="3" />
-					<label for="contactChoice2">3</label>
+					<input type="radio" id="recChoice3" name="contact" value="3" />
+					<label for="recChoice3">3</label>
 				</td>
 				<td>
-					<input type="radio" id="contactChoice4" name="contact" value="4" />
-					<label for="contactChoice2">4</label>
+					<input type="radio" id="recChoice4" name="contact" value="4" />
+					<label for="recChoice4">4</label>
 				</td>
 				<td>
-					<input type="radio" id="contactChoice5" name="contact" value="5" />
-					<label for="contactChoice3">5</label>
+					<input type="radio" id="recChoice5" name="contact" value="5" />
+					<label for="recChoice5">5</label>
 				</td>
 			</tr>
 			<tr>
@@ -96,7 +95,7 @@
 		</table>
 
 		<div>Please list some areas of improvement, or things that worked well. You can also leave general comments here.</div>
-		<textarea id="body" style="height: 250px; width: 250px;"></textarea>
+		<textarea id="open" style="height: 250px; width: 250px;"></textarea>
 
 		<div><button onclick="submitThings()" type="button" id="send">Submit</button></div>
 
