--- a/form_test.html
+++ b/form_test.html
@@ -20,23 +20,23 @@
 			
 			<tr>
 				<td>
-					<input type="radio" id="rateChoice1" name="contact" value="1" />
+					<input type="radio" class="rateChoice" id="rateChoice1" name="contact" value="1" />
 					<label for="rateChoice1">1</label>
 				</td>
 				<td>
-					<input type="radio" id="rateChoice2" name="contact" value="2" />
+					<input type="radio" class="rateChoice" id="rateChoice2" name="contact" value="2" />
 					<label for="rateChoice2">2</label>
 				</td>
 				<td>
-					<input type="radio" id="rateChoice3" name="contact" value="3" />
+					<input type="radio" class="rateChoice" id="rateChoice3" name="contact" value="3" />
 					<label for="rateChoice2">3</label>
 				</td>
 				<td>
-					<input type="radio" id="rateChoice4" name="contact" value="4" />
+					<input type="radio" class="rateChoice" id="rateChoice4" name="contact" value="4" />
 					<label for="rateChoice2">4</label>
 				</td>
 				<td>
-					<input type="radio" id="rateChoice5" name="contact" value="5" />
+					<input type="radio" class="rateChoice" id="rateChoice5" name="contact" value="5" />
 					<label for="rateChoice3">5</label>
 				</td>
 			</tr>
@@ -60,23 +60,23 @@
 			
 			<tr>
 				<td>
-					<input type="radio" id="recChoice1" name="contact" value="1" />
+					<input type="radio" class="recChoice" id="recChoice1" name="rec" value="1" />
 					<label for="recChoice1">1</label>
 				</td>
 				<td>
-					<input type="radio" id="recChoice2" name="contact" value="2" />
+					<input type="radio" class="recChoice" id="recChoice2" name="rec" value="2" />
 					<label for="recChoice2">2</label>
 				</td>
 				<td>
-					<input type="radio" id="recChoice3" name="contact" value="3" />
+					<input type="radio" class="recChoice" id="recChoice3" name="rec" value="3" />
 					<label for="recChoice3">3</label>
 				</td>
 				<td>
-					<input type="radio" id="recChoice4" name="contact" value="4" />
+					<input type="radio" class="recChoice" id="recChoice4" name="rec" value="4" />
 					<label for="recChoice4">4</label>
 				</td>
 				<td>
-					<input type="radio" id="recChoice5" name="contact" value="5" />
+					<input type="radio" class="recChoice" id="recChoice5" name="rec" value="5" />
 					<label for="recChoice5">5</label>
 				</td>
 			</tr>
