--- a/form_test.html
+++ b/form_test.html
@@ -97,7 +97,7 @@
 		<div>Please list some areas of improvement, or things that worked well. You can also leave general comments here.</div>
 		<textarea id="open" style="height: 250px; width: 250px;"></textarea>
 
-		<div><button onclick="submitThings()" type="button" id="send">Submit</button></div>
+		<div><button onclick="submitThings();location.href='/form_test_2.html'" type="button" id="send">Submit</button></div>
 
 		
 	</div><!-- /container -->
