--- a/form_test_2.html
+++ b/form_test_2.html
@@ -10,12 +10,17 @@
 	<!-- +++++ Testing Form +++++ -->
 	
 	<div class="container pt" >
-        <div id="test">
 
-        </div>
+        <div id="dynQ1"></div>
+		<textarea id="open" style="height: 250px; width: 500px;"></textarea>
 
+        <div id="dynQ2"></div>
+		<textarea id="open" style="height: 250px; width: 500px;"></textarea>
+
+        <div id="dynQ3"></div>
+		<textarea id="open" style="height: 250px; width: 500px;"></textarea>
 		
-
+        <div><button onclick="" type="button" id="send">Submit</button></div>
 		
 	</div><!-- /container -->
 
