--- a/form_test_2.html
+++ b/form_test_2.html
@@ -11,16 +11,32 @@
 	
 	<div class="container pt" >
 
-        <div id="dynQ1"></div>
-		<textarea id="open" style="height: 100px; width: 500px;"></textarea>
-
-        <div id="dynQ2"></div>
-		<textarea id="open" style="height: 100px; width: 500px;"></textarea>
-
-        <div id="dynQ3"></div>
-		<textarea id="open" style="height: 100px; width: 500px;"></textarea>
-		
-        <div><button onclick="" type="button" id="send">Submit</button></div>
+    <form>
+      <fieldset>
+          <legend>Page 1</legend>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name"><br>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email"><br>
+          <button type="button" class="next">Next</button>
+      </fieldset>
+      <fieldset>
+          <legend>Page 2</legend>
+          <label for="address">Address:</label>
+          <input type="text" id="address" name="address"><br>
+          <label for="city">City:</label>
+          <input type="text" id="city" name="city"><br>
+          <button type="button" class="prev">Previous</button>
+          <button type="button" class="next">Next</button>
+      </fieldset>
+      <fieldset>
+          <legend>Page 3</legend>
+          <label for="phone">Phone:</label>
+          <input type="tel" id="phone" name="phone"><br>
+          <button type="button" class="prev">Previous</button>
+          <input type="submit" value="Submit">
+      </fieldset>
+  </form>
 		
 	</div><!-- /container -->
 
