--- a/form_test_2.html
+++ b/form_test_2.html
@@ -23,31 +23,40 @@
                     <!-- progressbar -->
                     <ul id="progressbar">
                         <li class="active" id="account"><strong>Initial</strong></li>
-                        <li id="personal"><strong>Dynamic</strong></li>
+                        <li id="personal"><strong>Dynamic Generated</strong></li>
                     </ul>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div> <br> <!-- fieldsets -->
                     <fieldset>
                         <div class="form-card">
-                            <div class="row">
-                                <div class="col-7">
-                                    <h2 class="fs-title">Account Information:</h2>
-                                </div>
-                                <div class="col-5">
-                                    <h2 class="steps">Step 1 - 4</h2>
-                                </div>
-                            </div> <label class="fieldlabels">Email: *</label> <input type="email" name="email" placeholder="Email Id" /> <label class="fieldlabels">Username: *</label> <input type="text" name="uname" placeholder="UserName" /> <label class="fieldlabels">Password: *</label> <input type="password" name="pwd" placeholder="Password" /> <label class="fieldlabels">Confirm Password: *</label> <input type="password" name="cpwd" placeholder="Confirm Password" />
-                        </div> <input type="button" name="next" class="next action-button" value="Next" />
+                          <div class="row">
+                              <div class="col-7">
+                                  <h2 class="fs-title">Initial Review</h2>
+                              </div>
+                              <div class="col-5">
+                                  <h2 class="steps">Step 1 - 2</h2>
+                              </div>
+                          </div>
+
+                          <label class="fieldlabels">Please enter what product you are providing feedback for: </label> 
+                          <input type="text" name="product" placeholder="Type Here" /> 
+                          
+                          <label class="fieldlabels">Please type your review here. Please list areas of improvement, or features that worked well. You can also leave general comments.</label> 
+                          <input type="textarea" name="openR" placeholder="Type Here" /> 
+                          
+                        </div> 
+
+                        <input type="button" name="next" class="next action-button" value="Next" />
                     </fieldset>
                     <fieldset>
                         <div class="form-card">
                             <div class="row">
                                 <div class="col-7">
-                                    <h2 class="fs-title">Personal Information:</h2>
+                                    <h2 class="fs-title">Additional Questions</h2>
                                 </div>
                                 <div class="col-5">
-                                    <h2 class="steps">Step 2 - 4</h2>
+                                    <h2 class="steps">Step 2 - 2</h2>
                                 </div>
                             </div> <label class="fieldlabels">First Name: *</label> <input type="text" name="fname" placeholder="First Name" /> <label class="fieldlabels">Last Name: *</label> <input type="text" name="lname" placeholder="Last Name" /> <label class="fieldlabels">Contact No.: *</label> <input type="text" name="phno" placeholder="Contact No." /> <label class="fieldlabels">Alternate Contact No.: *</label> <input type="text" name="phno_2" placeholder="Alternate Contact No." />
                         </div> <input type="button" name="next" class="next action-button" value="Next" /> <input type="button" name="previous" class="previous action-button-previous" value="Previous" />
