--- a/form_test_2.html
+++ b/form_test_2.html
@@ -43,7 +43,7 @@
                           <input type="text" name="product" placeholder="Type Here" /> 
                           
                           <label class="fieldlabels">Please type your review here. Please list areas of improvement, or features that worked well. You can also leave general comments.</label> 
-                          <input type="textarea" name="openR" placeholder="Type Here" /> 
+                          <textarea type="textarea" name="openR" placeholder="Type Here" /> 
                           
                         </div> 
 
