--- a/form_test_2.html
+++ b/form_test_2.html
@@ -4,6 +4,8 @@
 	<script src="/assets/iframe_ext/jquery_mostRecent.js"></script>
   <script src="/form_funct.js"></script>
   <link href="./form_css.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
 	
   </head>
 
