--- a/form_test_2.html
+++ b/form_test_2.html
@@ -30,6 +30,9 @@
                       <div class="progress">
                           <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                       </div> <br> <!-- fieldsets -->
+
+                      <div>testing things here</div>
+
                       <fieldset>
                           <div class="form-card">
                             <div class="row">
