--- a/form_test_2.html
+++ b/form_test_2.html
@@ -31,7 +31,7 @@
                           <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                       </div> <br> <!-- fieldsets -->
 
-                      <div style="text-align:left">testing things here</div>
+                      <div style="text-align:left; padding-left: 20px;">testing things here</div>
 
                       <fieldset>
                           <div class="form-card">
