--- a/form_test_2.html
+++ b/form_test_2.html
@@ -24,8 +24,8 @@
                   <form id="msform">
                       <!-- progressbar -->
                       <ul id="progressbar">
-                          <li class="active" id="account"><strong>Initial</strong></li>
-                          <li id="personal"><strong>Dynamic Generated</strong></li>
+                          <li class="active"><strong>Initial</strong></li>
+                          <li ><strong>Dynamic Generated</strong></li>
                       </ul>
                       <div class="progress">
                           <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
