--- a/form_test_2.html
+++ b/form_test_2.html
@@ -21,6 +21,7 @@
                   <p>Testing a dynamic form. It uses GPT3 to create follow-up questions based on your open ended responses. The form is structured as a product feedback form, but the idea is that you can 
                     expand this to anything, i.e. opinion survey, voice of customer, etc.
                   </p>
+                  
                   <form id="msform">
                       <!-- progressbar -->
                       <ul id="progressbar">
@@ -80,6 +81,10 @@
                       </fieldset>
                       
                   </form>
+
+                  <p>
+                    Credit to the forms <a href="https://csshint.com/multi-step-html-forms/">here</a> for me to template off of.
+                  </p>
               </div>
           </div>
       </div>
