--- a/form_test_2.html
+++ b/form_test_2.html
@@ -75,7 +75,7 @@
                               <textarea type="textarea" name="DynQ3R" id="DynQ3R" placeholder="Type Here"></textarea> 
 
                           </div> 
-                          <input type="button" name="next" class="next action-button" value="Submit" /> 
+                          <input type="submit" name="next" class="next action-button" value="Submit" /> 
                           <input type="button" name="previous" class="previous action-button-previous" value="Previous" />
                       </fieldset>
                       
