--- a/form_test_2.html
+++ b/form_test_2.html
@@ -20,7 +20,7 @@
               <div class="card px-0 pt-4 pb-0 mt-3 mb-3">
                   <h2 id="heading">Dynamic Form Test</h2>
                   <p>Testing a dynamic form. It uses GPT3 to create follow-up questions based on your open ended responses. The form is structured as a product feedback form, but the idea is that you can 
-                    expand this to anything, i.e. opinion survey, voice of customer, etc.
+                    expand this to anything, i.e. opinion surveys, voice of customer surveys, etc.
                   </p>
                   
                   <form id="msform">
