--- a/form_test_2.html
+++ b/form_test_2.html
@@ -89,6 +89,37 @@
       </div>
   </div>
 
+
+  <script>
+
+        async function main(){
+            var prompt=`A user is giving feedback on the product: "cake". The user has provided the following open ended feedback:"It's too sweet". Generate a set of 3 questions asking for elaboration on their feedback with the goal of eliciting more specific details of their opinion.`
+
+            const { Configuration, OpenAIApi } = require("openai");
+
+            //console.log('OpenAI')
+
+            const configuration = new Configuration({
+                apiKey: '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',
+            });
+            const openai = new OpenAIApi(configuration);
+
+            const response = await openai.createCompletion({
+                model: "text-davinci-003",
+                prompt: prompt,
+                temperature: 0.9,
+                max_tokens: 250,
+                top_p: 1,
+                frequency_penalty: 0,
+                presence_penalty: 0.6,
+            });
+
+        }
+
+        console.log(main())
+        
+  </script>
+
   </body>
 
 </html>
