--- a/index_WhisperTimeCluster.html
+++ b/index_WhisperTimeCluster.html
@@ -85,7 +85,7 @@
     let highlightSize = 10;
     // Use real data? comment init(sample); and uncomment loadData('data.json');
     //init(sample);
-    loadData('data.json');
+    loadData('data2.json');
 
     // Expected data.json shape:
     // {
