--- a/index_WhisperTimeCluster.html
+++ b/index_WhisperTimeCluster.html
@@ -51,7 +51,16 @@
   </div>
 
   <div>
-  <span style="display:inline-block;width:12px;height:12px;background:black;clip-path:circle();"></span> Station 1
+    <span style="display:inline-block;width:12px;height:12px;background:black;clip-path:circle();"></span> Station 1
+  </div>
+  <div>
+    <span style="display:inline-block;width:12px;height:12px;background:black;clip-path:square();"></span> Station 2
+  </div>
+  <div>
+    <span style="display:inline-block;width:12px;height:12px;background:black;clip-path:diamond();"></span> Station 3
+  </div>
+  <div>
+    <span style="display:inline-block;width:12px;height:12px;background:black;clip-path:triangle-up();"></span> Station 4
   </div>
 
   <footer>
